...
        return cell as! T
    }
}

extension UITableView {

    func setEmptyView(title: String = "Empty data",
                      message: String = "",
                      messageImage: UIImage = IMG.empty_data.image ?? UIImage()) {

        let emptyView = UIView(frame: CGRect(x: self.center.x, y: self.center.y, width: self.bounds.size.width, height: self.bounds.size.height))

        let messageImageView = UIImageView()
...
